# datumprikker

./: .gitignore  Cargo.toml
.github/workflows/: reuse.yml  rust.yml
data/: afspraak_overzicht_fewqvuycnmvgnx25.html  afspraak_overzicht_finalized.html  afspraak_overzicht_in_progress.html.license  afspraak_overzicht_invalid.html  afspraak_overzicht_participant.html
examples/: dump.rs
src/: download.rs  event.rs  event_overview_page.rs  lib.rs
